# marpa

./: ASF_STATUS.md  Cargo.toml  README.md
.github/workflows/: CI.yml
background/: README.md
docs/: ASF_PERFORMANCE_FINDINGS.md
libmarpa-sys/: Cargo.toml  README.md  build.rs
libmarpa-sys/src/: test.rs
marpa/: Cargo.toml  README.md
marpa-derives/: Cargo.toml
marpa-derives/src/: lib.rs
marpa-scanless/: Cargo.toml
marpa-scanless/src/: lib.rs
marpa-scanless/tests/: scanless.rs
marpa/src/: asf.rs  error.rs  lib.rs  macros.rs  meta_ast.rs  metag.rs  scanless.rs
marpa/src/asf/: glade.rs  nidset.rs  stats.rs
marpa/src/grammar/: mod.rs
marpa/src/lexer/: byte_scanner.rs  mod.rs
marpa/src/parser/: mod.rs
marpa/src/scanless/: g.rs  mod.rs  r.rs
marpa/src/stack/: mod.rs
marpa/src/thin/: bocage.rs  event.rs  grammar.rs  macros.rs  mod.rs  order.rs  recognizer.rs  tree.rs  value.rs
marpa/src/tree_builder/: builder.rs  mod.rs  tree.rs
marpa/tests/: asf_perf_compare.rs  asf_traverse_parse.rs  main.rs  metag.rs  scanless.rs
meta/: slif_to_rust.pl
