[package]
name = "libmarpa-sys"
version = "0.3.0"
authors = [
  "Josh Robson Chase <josh@robsonchase.com>",
  "Deyan Ginev <deyan.ginev@gmail.com>",
]
description = "Low-level bindings to the libmarpa parsing engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dginev/marpa"
documentation = "https://docs.rs/libmarpa-sys"
edition = "2024"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1"
flate2 = "1"
tar = "0.4"
bindgen = "0.72"
