[package]
# Renamed fork of `libmarpa-sys` (the upstream name is taken on crates.io):
# the ASF-completion variant vendored by latexml-oxide. The crate's lib name
# stays the default, and downstream depends on it via cargo's `package` alias
# (`libmarpa-sys = { package = "libmarpa-asf-sys" }`), so no code changes.
name = "libmarpa-asf-sys"
version = "0.3.0"
authors = [
  "Josh Robson Chase <josh@robsonchase.com>",
  "Deyan Ginev <deyan.ginev@gmail.com>",
]
description = "Low-level bindings to the libmarpa parsing engine (ASF-completion fork; vendors libmarpa C)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dginev/marpa"
documentation = "https://docs.rs/libmarpa-asf-sys"
keywords = ["marpa", "parsing", "bindings", "ffi", "earley"]
categories = ["external-ffi-bindings", "parsing"]
edition = "2024"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1"
flate2 = "1"
tar = "0.4"
bindgen = "0.72"
