[package]
name = "marpa-scanless"
description = "Scanless interface for Marpa"
version = "0.0.1"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
regex = "1.1.0"
syn = "0.15"
proc-macro2 = "0.4"
quote = "0.6"
lazy_static = "1.0.0"

[dependencies.libmarpa-sys]
version = "0.2.0"
path="../libmarpa-sys"
