[package]
name = "marpa"
version = "0.3.0"
authors = [
  "Josh Robson Chase <josh@robsonchase.com>",
  "Deyan Ginev <deyan.ginev@gmail.com>",
]
description = "Safe bindings to the libmarpa parsing engine"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dginev/marpa"
documentation = "https://docs.rs/marpa"
edition = "2024"

[dependencies]
rustc-hash = "2.0.0"
libmarpa-sys = { version = "0.2.0", path = "../libmarpa-sys" }
